# singer-python

./: Makefile  pyproject.toml  setup.py
