[tool.poetry]
name = "singer-python"
version = "6.1.0"
description = "Singer.io utility library"
authors = ["Stitch"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/python-devops-sre/singer-python"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "singer/**/*.py" },
    { include = "singer/logging.conf" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2024.2"
jsonschema = "^4.23.0"
simplejson = "^3.19.3"
python-dateutil = "^2.9.0.post0"
backoff = "^2.2.1"
ciso8601 = "^2.3.1"
setuptools = "^70.3.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
ipython = "^8.29.0"
ipdb = "^0.13.13"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
